Add a nice font

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <link rel="stylesheet" href="//unpkg.com/normalize.css@8.0.1/normalize.css">
   <link rel="stylesheet" href="/assets/main.css">
+  <link href="//fonts.googleapis.com/css?family=EB+Garamond&display=swap" rel="stylesheet">
 </head>
 <body>
   <main>
