--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
     <section>
       <h1>I am A Moustache.</h2>
       <p class="centered-text">& this is my stuff</p>
+      <ul>
+        <li>
+          <a href="https://linkedin.com/in/andreimustata">LinkedIn</a>
+        </li>
+        <li>
+            <a href="https://github.com/andreimoustache">GitHub</a>
+        </li>
+        <li>
+            <a href="https://twitter.com/andreimoustache">Twitter</a>
+        </li>
+      </ul>
     </section>
   </main>
 
