Add font awesome icons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="//unpkg.com/normalize.css@8.0.1/normalize.css">
   <link rel="stylesheet" href="/assets/main.css">
   <link href="//fonts.googleapis.com/css?family=EB+Garamond&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/87ac18817c.js"></script>
 </head>
 <body>
   <main>
@@ -19,13 +20,19 @@
       <p class="centered-text">& this is my stuff</p>
       <ul>
         <li>
-          <a href="https://linkedin.com/in/andreimustata">LinkedIn</a>
+          <a href="https://linkedin.com/in/andreimustata">
+            <i class="fab fa-linkedin"></i>
+          </a>
         </li>
         <li>
-            <a href="https://github.com/andreimoustache">GitHub</a>
+            <a href="https://github.com/andreimoustache">
+              <i class="fab fa-github"></i>
+            </a>
         </li>
         <li>
-            <a href="https://twitter.com/andreimoustache">Twitter</a>
+            <a href="https://twitter.com/andreimoustache">
+              <i class="fab fa-twitter"></i>
+            </a>
         </li>
       </ul>
     </section>
