Add GA snippet :(

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
   <link rel="stylesheet" href="/assets/main.css">
   <link href="//fonts.googleapis.com/css?family=EB+Garamond&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/87ac18817c.js"></script>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3938207-9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-3938207-9');
+  </script>
+
 </head>
 <body>
   <main>
