--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-3938207-9');
+    gtag('config', 'UA-3938207-9', { 'anonymize_ip': true });
   </script>
 
 </head>
