--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 
 </head>
 <body>
+  <header></header>
   <main>
     <section>
       <h1>I am A Moustache.</h2>
       <p class="centered-text">& this is my stuff</p>
-      <ul>
+      <ul class="double-text">
         <li>
           <a href="https://linkedin.com/in/andreimustata">
             <i class="fab fa-linkedin"></i>
