Add Cookiebot banner

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <link rel="stylesheet" href="/assets/main.css">
   <link href="//fonts.googleapis.com/css?family=EB+Garamond&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/87ac18817c.js"></script>
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="dd5dc4b4-b6c7-49df-b9e2-feabef0843f8" data-blockingmode="auto" type="text/javascript"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3938207-9"></script>
-  <script>
+  <script data-cookieconsent="statistics">
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
