Move GA init script to separate file

--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
   <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="dd5dc4b4-b6c7-49df-b9e2-feabef0843f8" data-blockingmode="auto" type="text/javascript"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3938207-9"></script>
-  <script data-cookieconsent="statistics">
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-3938207-9', { 'anonymize_ip': true });
-  </script>
+  <script data-cookieconsent="statistics" src="/script.js"></script>
 
 </head>
 <body>
